--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,8 @@
         <nav>
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "Sign in",   '#' %></li>
-            <li><%= link_to "Users",   '#' %></li>
-            <li><%= link_to "Hosts",   '#' %></li>
+            <li><%= link_to "Users",   '/users' %></li>
+            <li><%= link_to "Hosts",   '/hosts' %></li>
             <li><%= link_to "FAQs",   '/static_page/faq' %></li>
 
           </ul>
