--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,8 @@
             <li><%= link_to "Sign in",   '#' %></li>
             <li><%= link_to "Users",   '/users' %></li>
             <li><%= link_to "Hosts",   '/hosts' %></li>
+            <li><%= link_to "Listings",   '/listings' %></li>
+             <li><%= link_to "Transactions",   '/transactions' %></li>
             <li><%= link_to "FAQs",   '/static_page/faq' %></li>
 
           </ul>
