--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,24 +5,30 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
     <header class="navbar navbar-fixed-top navbar-inverse", id="navbar">
       <div class="container">
         <%= link_to "AirStorage", '/', id: "logo" %>
         <nav>
           <ul class="nav navbar-nav navbar-right">
+            <%= form_tag('/search', :method => "get",   
+                class: 'navbar-form navbar-left') do %>
+              <div class="input-group">
+                <%= search_field_tag :search, params[:search], placeholder: "Enter a zipcode", class: "form-control", style: "top: 1px;" %>
+                <div class="input-group-btn">
+                  <%= button_tag "", :class => 'btn btn-info glyphicon glyphicon-search',:name => nil%>
+                </div>
+              </div>
+            <% end %>
             <li><%= link_to "Sign in",   '#' %></li>
             <li><%= link_to "Users",   '/users' %></li>
             <li><%= link_to "Hosts",   '/hosts' %></li>
             <li><%= link_to "Listings",   '/listings' %></li>
-             <li><%= link_to "Transactions",   '/transactions' %></li>
+            <li><%= link_to "Transactions",   '/transactions' %></li>
             <li><%= link_to "FAQs",   '/static_page/faq' %></li>
-
           </ul>
         </nav>
       </div>
