edit readme, update faq page

--- a/app/views/static_page/faq.html.erb
+++ b/app/views/static_page/faq.html.erb
@@ -13,12 +13,18 @@
 
     <ul>
     <li>
-    <p>Q: What is Air Storage?</p>
+    <p><b>Q: What is Air Storage?</b></p>
     <p>A: Air Storage is an app allows your to find any host that meet your need to store your item for a while.</p></li>
 
     <li>
-    <p>Q: What is Air Storage?</p>
-    <p>A: Air Storage is an app allows your to find any host that meet your need to store your item for a while.</p></li>
+    <p><b>Q: How can I find a host for my storage?</b></p>
+    <p>A: You can view a list of hosts, who have different spaces, time available in the listing page. Also you can find
+    a host at your location by searching on the zip code. </p></li>
+
+    <li>
+    <p><b>Q: How much does the stroage cost?</b></p>
+    <p>A: Different host arrange their offering prices differently. You can contant hosts for details. </p></li>
+
     </ul>
 
  </div>
