--- a/app/views/static_page/faq.html.erb
+++ b/app/views/static_page/faq.html.erb
@@ -22,7 +22,7 @@
     a host at your location by searching on the zip code. </p></li>
 
     <li>
-    <p><b>Q: How much does the stroage cost?</b></p>
+    <p><b>Q: How much does the storage cost?</b></p>
     <p>A: Different host arrange their offering prices differently. You can contant hosts for details. </p></li>
 
     </ul>
