--- a/app/assets/stylesheets/hosts.scss
+++ b/app/assets/stylesheets/hosts.scss
@@ -1,3 +1,23 @@
 // Place all the styles related to the Hosts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+
+.name{
+    text-align: left;
+}
+
+.user-info{
+    background-color: rgb(227, 228, 160);
+    width: 45%;
+    text-align: left;
+    font-family: Helvetica, sans-serif;
+    color:black;
+}
+
+.current-listings{
+    color:black;
+    background-color: aliceblue;
+    width: 45%;
+}
+
