--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -8,8 +8,8 @@
             <table class="table">
                 <thead>
                     <tr>
-                        <th scope="col">User</th>
                         <th scope="col">Host</th>
+                        <th scope="col">User</th>
                         <th scope="col">Price</th>
                         <th scope="col">Duration (weeks)</th>
     
@@ -18,8 +18,8 @@
                 <tbody>
                     <% @transactions.each do |t|%>
                     <tr>
-                        <td><%= Host.find(t.host_id).name%></td>
-                        <td><%= User.find(t.user_id).name%></td>
+                        <td><%=link_to t.host.name, t.host%></td>
+                        <td><%= link_to t.user.name, t.user%></td>
                         <td><%= t.price%></td>
                         <td><%= t.duration%></td>
                        
