--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,19 +23,30 @@
                 </div>
               </div>
             <% end %>
-            <li><%= link_to "Sign in",   '#' %></li>
-            <li><%= link_to "Users",   '/users' %></li>
-            <li><%= link_to "Hosts",   '/hosts' %></li>
-            <li><%= link_to "Listings",   '/listings' %></li>
-            <li><%= link_to "Transactions",   '/transactions' %></li>
-            <li><%= link_to "FAQs",   '/static_page/faq' %></li>
+            <% if logged_in? %>
+              <li><%= link_to "Profile",   "#" %></li>
+              <li><%= link_to "Users",   users_path %></li>
+              <li><%= link_to "Hosts",   '/hosts' %></li>
+              <li><%= link_to "Listings",   '/listings' %></li>
+              <li><%= link_to "Transactions",   '/transactions' %></li>
+              <li><%= link_to "FAQs",   '/static_page/faq' %></li>
+              <li><%= link_to "Logout", logout_path, method: :delete %></li>
+            <% else %>
+              <li><%= link_to "Sign in",   login_path %></li>
+              <li><%= link_to "FAQs",   '/static_page/faq' %></li>
+            <% end %>
+
           </ul>
         </nav>
       </div>
     </header>
     <div class="container">
+      <% flash.each do |message_type, message| %>
+        <div class="alert alert-<%= message_type %>"><%= message %></div>
+      <% end %>
       <%= yield %>
       <%= render 'layouts/footer' %>
+      <%= debug(params) if Rails.env.development? %>
     </div>
   </body>
 </html>
