--- a/app/views/hosts/new.html.erb
+++ b/app/views/hosts/new.html.erb
@@ -1,9 +1,9 @@
 <% provide(:title, 'Sign up') %>
-<h1>User Sign up</h1>
+<h1>Host Sign up</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_with(model: @user, local: true) do |f| %>
+    <%= form_with(model: @host, local: true) do |f| %>
       <%= render 'shared/error_messages' %>
     
       <%= f.label :name %>
@@ -33,7 +33,7 @@
       <%= f.label :zipcode, "Zip code" %>
       <%= f.text_field :zipcode, class: 'form-control' %>
 
-      <%= f.submit "Create my account", class: "btn btn-primary" %>
+      <%= f.submit "Create host account", class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
