--- a/app/views/static_page/home.html.erb
+++ b/app/views/static_page/home.html.erb
@@ -25,11 +25,13 @@ body {
 
   </div>
     <div class="col text-center">
-      <% if logged_in? %>
+      <% if user_logged_in? %>
         <%= link_to "Find a host near me", "#", class: "btn btn-lg btn-primary" %>
+      <% elsif host_logged_in? %>
+        <%= link_to "Start to sale my space", "#", class: "btn btn-lg btn-primary" %>
       <% else %>
         <%= link_to "Sign up as a User!", new_user_path, class: "btn btn-lg btn-primary" %>
-        <%= link_to "Become a host!", "#", class: "btn btn-lg btn-primary" %>
+        <%= link_to "Become a host!", new_host_path , class: "btn btn-lg btn-primary" %>
       <% end %>
     </div>
   </div>
