--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -9,8 +9,11 @@
                 <h4><strong>Host Name:</strong> <%= link_to @host.name, @host%> </h4>
                 <h4><strong>Space Available:</strong> <%= @listing.space%></h4>
                 <h4><strong>Max Duration:</strong> <%= @listing.duration%></h4>
-                <%= link_to "Rent Space", "/transactions/new",class:"btn btn-primary"%>
+                <% if user_logged_in?%>
+                <%= link_to "Rent Space", "/rent/#{@listing.id}",class:"btn btn-primary", method: :post%>
+                <% elsif current_host == @host %>
                 <%= link_to "Delete Listing","/listing/#{@listing.id}",class:"btn btn-danger",method: :delete%>
+                <% end%>
            </div>  
         </div>
     </body>
