--- a/app/views/hosts/show.html.erb
+++ b/app/views/hosts/show.html.erb
@@ -16,7 +16,9 @@
                     <p class="lead"><%= @host.phone_number%></p>
                 </div>
                 <div class="col-md-4 current-listings">
+                    <% if current_host == @host%>
                     <%= link_to "Add New Listing", "/listings/new", class:"btn btn-primary"%>
+                    <%end%>
                     <h3>Current Listings</h3>
                         <table class="table">
                             <thead>
@@ -39,6 +41,7 @@
                         </table>
                   
                 </div>
+                <% if current_host == @host%>
                 <div class="col-md-4 recent-transactions">
                     <h3>Recent Transactions</h3>
                     <table class="table">   
@@ -56,6 +59,7 @@
                         </tbody>
                     </table>
                 </div>
+                <%end%>
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
