--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,7 +13,7 @@
  *= require_tree .
  *= require_self
  */
- @import "bootstrap-sprockets"; 
+
 @import "bootstrap";
 
 body {
@@ -62,3 +62,79 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 1.1em;
     line-height: 1.7em;
   }
+
+
+  /* header */
+
+#logo {
+  font-family: Copperplate, sans-serif;
+  float: left;
+  margin-right: 10px;
+  font-size: 1.7em;
+  color: rgb(206, 127, 36);
+  letter-spacing: -1px;
+  padding-top: 9px;
+  font-weight: bold;
+}
+
+#logo:hover {
+  color: rgb(243, 242, 242);
+  text-decoration: none;
+}
+
+/* footer */
+
+footer {
+  margin-top: 45px;
+  padding-top: 5px;
+  border-top: 1px solid #eaeaea;
+  color: #777;
+}
+
+footer a {
+  color: rgb(253, 253, 253);
+}
+
+footer a:hover {
+  color: rgb(2, 0, 0);
+}
+
+footer small {
+  float: left;
+}
+
+footer ul {
+  float: right;
+  list-style: none;
+}
+
+footer ul li {
+  float: left;
+  margin-left: 15px;
+}
+
+/* homepage */
+
+#homepage {
+  background-image: url("https://images.pexels.com/photos/242236/pexels-photo-242236.jpeg?cs=srgb&dl=pexels-lorenzo-242236.jpg&fm=jpg");
+  background-size:cover
+}
+
+/* forms */
+
+
+@mixin box-sizing {
+box-sizing: border-box;
+}
+
+
+input, textarea, select, .uneditable-input {
+border: 1px solid #bbb;
+width: 100%;
+margin-bottom: 15px;
+@include box_sizing;
+}
+
+input {
+height: auto !important;
+}
