--- a/app/views/hosts/new.html.erb
+++ b/app/views/hosts/new.html.erb
@@ -1,8 +1,9 @@
 <% provide(:title, 'Sign up') %>
-<h1>Host Sign up</h1>
+
 
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
+  <div class="col-md-6 mx-auto user-form">
+    <h1>Host Sign up</h1>
     <%= form_with(model: @host, local: true) do |f| %>
       <%= render 'shared/error_messages' %>
     
