--- a/app/assets/stylesheets/static_page.scss
+++ b/app/assets/stylesheets/static_page.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the StaticPage controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+
+body{
+    background-image: url('pattern.png');
+    background-size: cover;
+}
+
+.faq-box{
+    background-color: white;
+}
+
+.accordion-button{
+    background-color:white;
+    border:none;
+}
+
+.accordion-button:hover{
+    background-color: antiquewhite;
+}
