--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
                 <option value="">Zipcode</option>
                 <option value="city">City</option>
                 <option value="duration">Duration (weeks)</option>
+                <option value="box">Box size</option>
                 <option value="duration">Locations nearby</option>
               </select>
             <% end %>
